--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.2",
     "morgan": "~1.9.1"
   }
 }
